--- a/project/SPTarkov.Core/SPT_Data/Launcher/Locales/German.json
+++ b/project/SPTarkov.Core/SPT_Data/Launcher/Locales/German.json
@@ -6,6 +6,7 @@
   "mod_loader": "Mod-Loader",
   "settings": "Einstellungen",
   "info": "Info",
+  "request_timed_out": "Zeitüberschreitung der Anforderung!",
   "home_add_server": "Neuen Server hinzufügen",
   "home_add_server_cta": "Bitte füge oben über den Button „Neuen Server hinzufügen“ einen Server hinzu.",
   "server_card_protect": "Vor Änderungen geschützt",
@@ -17,13 +18,12 @@
   "server_card_login": "Beim Server anmelden",
   "server_card_logout": "Vom Server abmelden",
   "server_card_delete": "Server löschen",
-  "info_hub_desc": "Das aktuelle Zuhause von SPT",
-  "info_translations": "Probleme mit den Übersetzungen? Bitte öffne einen PR mit den Korrekturen auf GitHub.",
   "info_forge_desc": "Die beste Ressource für Single Player Tarkov Mods.",
   "info_github_desc": "Das GitHub für alle SPT-bezogenen Repositories",
   "info_discord_desc": "Der SPT Discord",
   "info_wiki_desc": "Escape From Tarkov Wiki",
   "info_changelog_desc": "Wiki-Änderungsprotokoll",
+  "info_translations": "Probleme mit den Übersetzungen? Bitte öffne einen PR mit den Korrekturen auf GitHub.",
   "profile_logout": "Von Profil abmelden",
   "profile_start_game": "Spiel starten",
   "profiles_disconnect": "Vom Server trennen",
